<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/BE_TV_BusHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Main_TV_BusHolder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BE_TV_BusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/BE_TV_BusHolder"
        app:layout_constraintStart_toEndOf="@+id/BE_TV_BusHolder" />

    <Button
        android:id="@+id/BE_Button_DelStop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:text="@string/BE_Button_RemoveStop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/BE_TV_StopHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Exec_TV_StopHolder"
        app:layout_constraintBaseline_toBaselineOf="@+id/BE_TV_BusName"
        app:layout_constraintStart_toEndOf="@+id/BE_TV_BusName" />

    <TextView
        android:id="@+id/BE_TV_StopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/BE_TV_StopHolder"
        app:layout_constraintStart_toEndOf="@+id/BE_TV_StopHolder" />
</androidx.constraintlayout.widget.ConstraintLayout>