<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusEditScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_BusEdit"
        android:layout_width="408dp"
        android:layout_height="479dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BE_Button_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Button_Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RV_BusEdit"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/BE_Button_DelTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/BE_Button_DelTrip"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/BE_Button_AddStop"
        app:layout_constraintEnd_toStartOf="@+id/BE_Button_AddStop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BE_Button_AddStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:text="@string/BE_Button_AddStop"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>